possible fix for iframe width on mobile

--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -151,14 +151,14 @@ a:visited {
 .scroll-wrapper {
     -webkit-overflow-scrolling: touch;
     width: 100%;
+    padding-left: 7px;
+    padding-right: 7px;
     overflow-y: hidden;
 
     iframe {
-        width: 1px;
-        min-width:100%;
-        *width: 100%;
-        padding-left: 7px;
-        padding-right: 7px;
+        width: 1px !important;
+        min-width:100% !important;
+        *width: 100% !important;
         height:93vh;
         border: none;
         background-color: $light-blue;
